--- a/HTML/Video.HTMl
+++ b/HTML/Video.HTMl
@@ -4,100 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel = "stylesheet" href = "../CSS/Video.css">
 
   <TITLE>Haiper-AI</TITLE>
-
-  <STYLE>
-body {
-  animation: fadeIn 0.8s ease-in-out;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-}
-
-table {
-  width: 50%;
-  margin: 20px auto;
-  border-collapse: collapse;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 1);
-}
-
-th, td {
-  padding: 15px;
-  text-align: center;
-  border-bottom: 1px solid #ddd;
-}
-
-tr:nth-child(odd) {
-  background-color: #333;
-  color: white;
-}
-
-tr:nth-child(even) {
-  background-color: hwb(184 84% 4%);
-}
-
-header {
-  background-color: #333;
-  color: white;
-  padding: 15px;
-  text-align: center;
-}
-
-nav {
-  display: flex;
-  justify-content: center;
-  background-color: #444;
-}
-
-nav a {
-  color: white;
-  padding: 15px 60px;
-  text-decoration: none;
-  text-align: center;
-}
-
-nav a:hover {
-  background-color: #555;
-}
-
-div {
-  background-color: #555;
-  padding: 15px;
-  border-radius: 20px;
-  text-align: center;
-  width: 1000px;
-  margin: 10px auto;
-}
-
-.title-text {
-  font-size: 24px;
-  color: white;
-  font-weight: bold;
-}
-
-.description-text {
-  font-size: 15px;
-  color: white;
-  margin-top: 10px;
-}
-
-/* 페이드 인 애니메이션 정의 */
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-  </STYLE>
 
   </head>
 
   <body>
     <header>
-    <H1>동영상을 생성하는 생성형 AI <FONT color = "red">"Haiper-AI"</FONT></H1>
+    <H1>동영상을 생성하는 생성형 AI <FONT color = "#e76161">"Haiper-AI"</FONT></H1>
     </header>
 
     <nav>
@@ -125,7 +40,7 @@ div {
       <TR>
         <TD>
           <video width="480" height="360" controls>
-            <source src="671cc4151e74f8ee37ac308f.mp4" type="video/mp4">
+            <source src="../VIdeo/671cc4151e74f8ee37ac308f.mp4" type="video/mp4">
           </video>
         </TD>
       </TR>
